[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.0.0"
chrono = { version = "0.4.45", features = ["serde"] }
deadpool-postgres = "0.14.1"
regex = "1.13.1"
ring = "0.17.14"
serde = {version = "1.0.228",features=["derive"]}
serde_json = "1.0.150"
thiserror = "2.0.19"
tokio = {version = "1.52.4", features=["full"]}
tokio-postgres = {version = "0.7.18", features = ["with-chrono-0_4"]}
